# iab-categorization-comparison

./: .env.example  .pre-commit-config.yaml  README.md  download_hf_models.sh  pyproject.toml  test_results.txt
src/: categories.py  categories_data.py  main.py  test_data.py
