[project]
name = "iab-categorization-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.107.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.uv.sources]
# Install and use CPU-only torch version
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
